Feature/cleanup doc (#47)
* update pyproject with new name and configs

* change description

* change repo name to pennylane_calculquebec

* cleanup doc folder

- move in depth documentation in the for_developer folder
- move puml in asset folder

* nromalize client name accross doc

* change repo name to pennylane_calculquebec

* cleanup doc folder

- move in depth documentation in the for_developer folder
- move puml in asset folder

* nromalize client name accross doc

* fix version and toml + update doc

--- a/doc/for_developers/using_configurations.ipynb
+++ b/doc/for_developers/using_configurations.ipynb
@@ -27,23 +27,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pennylane_calculquebec.API.client import MonarqClient\n",
     "import pennylane as qml\n",
@@ -134,14 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change the information in the client for your credentials\n",
-    "my_client = MonarqClient(\"your_host\", \"your_user\", \"your_access_token\", \"your_project_name\") \n",
-    "\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, processing_config=custom_config)"
+    "dev = qml.device(\"monarq.default\", shots=1000, client=my_client, processing_config=custom_config)"
    ]
   },
   {
@@ -153,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,23 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change the information in the client for your credentials\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
-    "\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client = client)\n",
+    "dev = qml.device(\"monarq.default\", shots=1000, client = my_client)\n",
     "\n",
     "# the former is the same as doing the latter\n",
     "\n",
-    "# change the information in the client for your credentials\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
-    "\n",
     "my_config = MonarqDefaultConfig()\n",
     "\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client = client, processing_config=my_config)"
+    "dev = qml.device(\"monarq.default\", shots=1000, client = my_client, processing_config=my_config)"
    ]
   }
  ],
