--- a/doc/for_developers/using_transpiler.ipynb
+++ b/doc/for_developers/using_transpiler.ipynb
@@ -17,25 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pennylane_calculquebec.API.client import MonarqClient\n",
     "import pennylane as qml"
@@ -43,23 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'000': 379, '001': 43, '010': 48, '011': 53, '100': 123, '101': 63, '110': 95, '111': 196}\n"
+      "{'000': 415, '001': 92, '010': 45, '011': 60, '100': 30, '101': 34, '110': 84, '111': 240}\n"
      ]
     }
    ],
    "source": [
     "# change the information in the client for your credentials\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
     "\n",
     "# no configuration argument => config is set to MonarqDefaultConfig\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, wires=[0, 1, 2], client=client) \n",
+    "dev = qml.device(\"monarq.default\", shots=1000, wires=[0, 1, 2], client=my_client) \n",
     "\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
