fix version in getting_started

--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "0. First and foremost, you have to make sure to have python version ```3.12.x``` intalled"
+    "0. First and foremost, you have to make sure to have python version ```3.10.x``` intalled"
    ]
   },
   {
@@ -47,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
+     ]
+    }
+   ],
    "source": [
     "# this line imports the pennylane library. It contains everything necessary for quantum programming\n",
     "import pennylane as qml\n",
