fix links in getting started

--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. create a [client](using_client.ipynb) for your device"
+    "1. create a [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) for your device"
    ]
   },
   {
@@ -103,7 +103,7 @@
     "\n",
     "There are 2 optional arguments : \n",
     "1. a number of wire or the exact wires (as an array)\n",
-    "2. a [configuration](./for_developers/using_configurations.ipynb)"
+    "2. a [configuration](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "source": [
     "It should be noted that because you specify wires on gates and on your device does not mean that those wires will be used on MonarQ. \n",
     "\n",
-    "For more information, see [using transpiler](using_transpiler.ipynb)"
+    "For more information, see [using transpiler](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_transpiler.ipynb)"
    ]
   },
   {
@@ -214,11 +214,12 @@
    "source": [
     "## more information \n",
     "\n",
-    "- [clients](using_client.ipynb)\n",
-    "- [processor configs](using_configurations.ipynb)\n",
-    "- [the transpiler](using_transpiler.ipynb)\n",
-    "- [custom processing steps](using_custom_steps.ipynb)\n",
-    "- [custom gates](using_custom_gates.ipynb)"
+    "- [clients](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb)\n",
+    "- [processor configs](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)\n",
+    "- [the transpiler](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_transpiler.ipynb)\n",
+    "- [custom processing steps](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_steps.ipynb)\n",
+    "- [custom gates](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_gates.ipynb)\n"
+    "- [api adapter](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_api_adapter.ipynb)"
    ]
   }
  ],
