fix urls in transpiler doc

--- a/doc/for_developers/using_transpiler.ipynb
+++ b/doc/for_developers/using_transpiler.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "This allows you to change transpiling steps, or even add new steps to the processing pipelines.\n",
     "\n",
-    "See [configurations](using_configurations.ipynb) for more information."
+    "See [configurations](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb) for more information."
    ]
   },
   {
@@ -90,7 +90,7 @@
     "\n",
     "You can also create new, custom steps to add to the processing pipeline. \n",
     "\n",
-    "See [custom steps](using_custom_steps.ipynb) for mor information."
+    "See [custom steps](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_steps.ipynb) for mor information."
    ]
   }
  ],
