--- a/doc/for_developers/using_configurations.ipynb
+++ b/doc/for_developers/using_configurations.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "decomp_readout = DecomposeReadout()\n",
     "base_decomp = CliffordTDecomposition()\n",
-    "placement = ASTAR()\n",
-    "routing = Swaps()\n",
+    "placement = ASTAR(\"yamaska\")\n",
+    "routing = Swaps(\"yamaska\")\n",
     "optimization = IterativeCommuteAndMerge()\n",
     "native_decomp = MonarqDecomposition()"
    ]
@@ -95,12 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# this is the default configuration (it is used by default in monarq.default)\n",
-    "default_config = MonarqDefaultConfig()\n",
+    "default_config = MonarqDefaultConfig(\"yamaska\")\n",
     "\n",
     "# This is an equivalent config, built up by hand using the TranspilerConfig base class\n",
     "default_config = ProcessingConfig(decomp_readout, base_decomp, placement, routing, optimization, native_decomp)\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pennylane_calculquebec.processing.config import MonarqDefaultConfig, MonarqDefaultConfigNoBenchmark, NoPlaceNoRouteConfig, EmptyConfig\n",
     "\n",
     "# this is the preset that is used by default when you dont set a config manually\n",
-    "default = MonarqDefaultConfig()\n",
+    "default = MonarqDefaultConfig(\"yamaska\")\n",
     "\n",
     "# this preset does the same thing as the default one, without the benchmarking acceptance tests in the placement and routing step\n",
-    "no_benchmark = MonarqDefaultConfigNoBenchmark()\n",
+    "no_benchmark = MonarqDefaultConfigNoBenchmark(\"yamaska\")\n",
     "\n",
     "# this preset skips the placement and routing part. Could be useful if you want to choose machine qubits and couplers manually\n",
     "no_place_no_route = NoPlaceNoRouteConfig()\n",
@@ -176,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_config = MonarqDefaultConfig(False)\n",
+    "my_config = MonarqDefaultConfig(\"yamaska\", False)\n",
     "\n",
     "# the former is the same as the following preset :\n",
-    "my_config = MonarqDefaultConfigNoBenchmark()"
+    "my_config = MonarqDefaultConfigNoBenchmark(\"yamaska\")"
    ]
   },
   {
@@ -195,12 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "placement_no_benchmark = ASTAR(use_benchmark = False)\n",
-    "routing_no_benchmark = Swaps(use_benchmark = False)\n",
+    "placement_no_benchmark = ASTAR(\"yamaska\", use_benchmark = False)\n",
+    "routing_no_benchmark = Swaps(\"yamaska\", use_benchmark = False)\n",
     "\n",
     "# you can then create a custom configuration with your custom steps\n",
     "config_no_benchmark = ProcessingConfig(decomp_readout, base_decomp, placement_no_benchmark, routing_no_benchmark, optimization, native_decomp)"
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
     "\n",
     "# the former is the same as doing the latter\n",
     "\n",
-    "my_config = MonarqDefaultConfig()\n",
+    "my_config = MonarqDefaultConfig(\"yamaska\")\n",
     "\n",
     "dev = qml.device(\"monarq.default\", shots=1000, client = my_client, processing_config=my_config)"
    ]
