--- a/doc/for_developers/using_custom_gates.ipynb
+++ b/doc/for_developers/using_custom_gates.ipynb
@@ -366,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'00': 490, '01': 121, '10': 61, '11': 328}\n"
+      "{'0000': tensor(435, requires_grad=True), '0001': tensor(67, requires_grad=True), '0010': tensor(8, requires_grad=True), '0011': tensor(6, requires_grad=True), '0100': tensor(6, requires_grad=True), '0101': tensor(1, requires_grad=True), '1000': tensor(415, requires_grad=True), '1001': tensor(45, requires_grad=True), '1010': tensor(5, requires_grad=True), '1011': tensor(5, requires_grad=True), '1100': tensor(4, requires_grad=True), '1101': tensor(3, requires_grad=True)}\n"
      ]
     }
    ],
@@ -388,7 +388,7 @@
     "config = EmptyConfig() \n",
     "\n",
     "# create a device that uses the empty configuration\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client = my_client, processing_config = config)\n",
+    "dev = qml.device(\"monarq.default\", machine_name=\"yukon\", shots=1000, client = my_client, processing_config = config)\n",
     "\n",
     "# This would be equivalent to a bell state (Hadamard(0), CNOT([0, 1]))\n",
     "# If we observe MonarQ's connectivity, we find that qubits 0 and 4 are adjacent\n",
@@ -406,19 +406,19 @@
     "    # native decomposition of a CNOT gate\n",
     "    \n",
     "    # Hadamard\n",
-    "    custom.Z90(4)\n",
-    "    custom.X90(4)\n",
-    "    custom.Z90(4)\n",
+    "    custom.Z90(1)\n",
+    "    custom.X90(1)\n",
+    "    custom.Z90(1)\n",
     "    \n",
-    "    qml.CZ([0, 4])\n",
+    "    qml.CZ([0, 1])\n",
     "    \n",
     "    # Hadamard\n",
-    "    custom.Z90(4)\n",
-    "    custom.X90(4)\n",
-    "    custom.Z90(4)\n",
+    "    custom.Z90(1)\n",
+    "    custom.X90(1)\n",
+    "    custom.Z90(1)\n",
     "    \n",
     "    # apply readouts on qubits 0 and 4\n",
-    "    return qml.counts(wires=[0, 4])\n",
+    "    return qml.counts(wires=[0, 1])\n",
     "\n",
     "# results should be the same as a bell state\n",
     "results = circuit()\n",
