--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
     "\n",
     "readout_error_mitigation = IBUReadoutMitigation()\n",
     "\n",
-    "my_config = MonarqDefaultConfig()\n",
+    "my_config = MonarqDefaultConfig(\"yamaska\")\n",
     "my_config.steps.append(readout_error_mitigation)\n",
     "print(*my_config.steps, sep=\"\\n\")"
    ]
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,8 +115,8 @@
     "# and then print the unmitigated results, followed by the mitigated results.\n",
     "my_config = ProcessingConfig(PrintCircuit(),\n",
     "                             CliffordTDecomposition(), \n",
-    "                             ASTAR(),\n",
-    "                             Swaps(),\n",
+    "                             ASTAR(\"yamaska\"),\n",
+    "                             Swaps(\"yamaska\"),\n",
     "                             IterativeCommuteAndMerge(),\n",
     "                             MonarqDecomposition(), \n",
     "                             PrintCircuit(),\n",
