--- a/doc/for_developers/using_custom_gates.ipynb
+++ b/doc/for_developers/using_custom_gates.ipynb
@@ -388,7 +388,7 @@
     "config = EmptyConfig() \n",
     "\n",
     "# create a device that uses the empty configuration\n",
-    "dev = qml.device(\"monarq.default\", machine_name=\"yukon\", shots=1000, client = my_client, processing_config = config)\n",
+    "dev = qml.device(\"monarq.default\", shots=1000, client = my_client, processing_config = config)\n",
     "\n",
     "# This would be equivalent to a bell state (Hadamard(0), CNOT([0, 1]))\n",
     "# If we observe MonarQ's connectivity, we find that qubits 0 and 4 are adjacent\n",
