apply backend logic to mitigation + new doc

--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -41,7 +41,7 @@
     "from pennylane_calculquebec.processing.config import MonarqDefaultConfig\n",
     "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation\n",
     "\n",
-    "readout_error_mitigation = IBUReadoutMitigation()\n",
+    "readout_error_mitigation = IBUReadoutMitigation(\"yamaska\")\n",
     "\n",
     "my_config = MonarqDefaultConfig(\"yamaska\")\n",
     "my_config.steps.append(readout_error_mitigation)\n",
@@ -121,7 +121,7 @@
     "                             MonarqDecomposition(), \n",
     "                             PrintCircuit(),\n",
     "                             PrintResults(),\n",
-    "                             IBUReadoutMitigation(), \n",
+    "                             IBUReadoutMitigation(\"yamaska\"), \n",
     "                             PrintResults())\n",
     "print(*my_config.steps, sep=\"\\n\")"
    ]
