improve error management in jobs and api. - format Thunderhead dictionary api response - enforce circuit name and project name - update doc and tests

--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -160,6 +160,9 @@
     "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
     "\n",
     "dev = qml.device(\"monarq.default\", client=my_client, processing_config = my_config, shots=1000)\n",
+    "\n",
+    "dev.circuit_name = \"your circuit\"\n",
+    "dev.project = \"your project\"\n",
     "\n",
     "# a simple ghz circuit\n",
     "@qml.qnode(dev)\n",
