--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,11 @@
     "dev = qml.device(\"monarq.default\", client=my_client, shots=1000, wires=[4, 1, 5]) # this will set wires = [4, 1, 5\n",
     "\n",
     "# You don't have to set any wires. This will rely on wires that have been used on operations and measurements from the circuit\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n"
+    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n",
+    "\n",
+    "# You need to set a name for your circuit and set the project on which you want to run this circuit\n",
+    "dev.circuit_name = \"your circuit\"\n",
+    "dev.project = \"your project\""
    ]
   },
   {
@@ -218,7 +222,7 @@
     "- [processor configs](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)\n",
     "- [the transpiler](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_transpiler.ipynb)\n",
     "- [custom processing steps](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_steps.ipynb)\n",
-    "- [custom gates](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_gates.ipynb)\n", 
+    "- [custom gates](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_gates.ipynb)\n",
     "- [api adapter](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_api_adapter.ipynb)"
    ]
   }
