--- a/doc/for_developers/using_transpiler.ipynb
+++ b/doc/for_developers/using_transpiler.ipynb
@@ -45,6 +45,9 @@
     "# no configuration argument => config is set to MonarqDefaultConfig\n",
     "dev = qml.device(\"monarq.default\", shots=1000, wires=[0, 1, 2], client=my_client) \n",
     "\n",
+    "dev.circuit_name = \"your circuit\"\n",
+    "dev.project = \"your project\"\n",
+    "\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
     "    qml.Hadamard(0)\n",
