feedback from juliette

--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. import dependencies :"
+    "2. Import dependencies:"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. create a [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) for your device"
+    "3. create a [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) for your device"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. create a device using your client"
+    "4. create a device using your client"
    ]
   },
   {
@@ -104,13 +104,13 @@
    "metadata": {},
    "source": [
     "There are 3 mandatory arguments for the device : \n",
-    "1. the name ```monarq.default```\n",
-    "2. a client\n",
-    "3. a number of shots (from 1 to 1000)\n",
+    "- the name ```monarq.default```\n",
+    "- a client\n",
+    "- a number of shots (from 1 to 1000)\n",
     "\n",
     "There are 2 optional arguments : \n",
-    "1. a number of wire or the exact wires (as an array)\n",
-    "2. a [configuration](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)"
+    "- a number of wire or the exact wires (as an array)\n",
+    "- a [configuration](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. create your circuit"
+    "5. create your circuit"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. run your circuit and use results as you see fit"
+    "6. run your circuit and use results as you see fit"
    ]
   },
   {
