--- a/doc/FR/prise_en_main.ipynb
+++ b/doc/FR/prise_en_main.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Ce document a pour objectif d'expliquer ce dont vous avez besoin pour utiliser MonarqDevice.\n",
     "\n",
-    "Ce \"device\" vous permet de communiquer directement avec MonarQ sans utiliser Snowflurry comme intermédiaire. Cela a pour avantage de ne pas passer par les appels et la précompilation en Julia. MonarqDevice est aussi équipé de compileur fait par Calcul Québec, qui est optimisé pour MonarQ.\n"
+    "Ce \"device\" vous permet de communiquer directement avec MonarQ sans utiliser Snowflurry comme intermédiaire. Cela a pour avantage de ne pas passer par les appels et la précompilation en Julia. MonarqDevice est aussi équipé de transpileur fait par Calcul Québec, qui est optimisé pour MonarQ.\n"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. importez les dépendances :"
+    "2. Importez les dépendances :"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Créez un [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) pour votre device."
+    "3. Créez un [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) pour votre device."
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Créez un device en utilisant votre objet client"
+    "4. Créez un device en utilisant votre objet client"
    ]
   },
   {
@@ -89,13 +89,13 @@
    "metadata": {},
    "source": [
     "Il y a 3 arguments obligatoires pour le device : \n",
-    "1. le nom ```monarq.default```\n",
-    "2. le client\n",
-    "3. le nombre d'échantillons\n",
+    "- le nom ```monarq.default```\n",
+    "- le client\n",
+    "- le nombre d'échantillons\n",
     "\n",
     "Il y a 2 arguments optionnels : \n",
-    "1. Le nombre de qubits (un entier), ou les qubits exacts (un tableau)\n",
-    "2. Une [configuration](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)"
+    "- Le nombre de qubits (un entier), ou les qubits exacts (un tableau)\n",
+    "- Une [configuration](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il faut noter que les qubits que vous spécifiez pour votre device et vos opérations ne seront pas nécessairement utilisés sur MonarQ. Cela est dû aux phases de placement et de routage du compilateur. \n",
+    "Il faut noter que les qubits que vous spécifiez pour votre device et vos opérations ne seront pas nécessairement utilisés sur MonarQ. Cela est dû aux phases de placement et de routage du transpileur. \n",
     "\n",
     "Pour plus d'information, lisez [using transpiler](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_transpiler.ipynb)"
    ]
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Créez votre circuit"
+    "5. Créez votre circuit"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Exécutez le circuit et utilisez les résultats comme vous le désirez"
+    "6. Exécutez le circuit et utilisez les résultats comme vous le désirez"
    ]
   },
   {
