--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -13,6 +13,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour la version française, visitez [cette page](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/FR/prise_en_main.ipynb). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -42,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. import dependencies :"
+    "2. Import dependencies:"
    ]
   },
   {
@@ -70,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. create a [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) for your device"
+    "3. create a [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) for your device"
    ]
   },
   {
@@ -89,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. create a device using your client"
+    "4. create a device using your client"
    ]
   },
   {
@@ -97,18 +104,18 @@
    "metadata": {},
    "source": [
     "There are 3 mandatory arguments for the device : \n",
-    "1. the name ```monarq.default```\n",
-    "2. a client\n",
-    "3. a number of shots (from 1 to 1000)\n",
+    "- the name ```monarq.default```\n",
+    "- a client\n",
+    "- a number of shots (from 1 to 1000)\n",
     "\n",
     "There are 2 optional arguments : \n",
-    "1. a number of wire or the exact wires (as an array)\n",
-    "2. a [configuration](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)"
+    "- a number of wire or the exact wires (as an array)\n",
+    "- a [configuration](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +126,11 @@
     "dev = qml.device(\"monarq.default\", client=my_client, shots=1000, wires=[4, 1, 5]) # this will set wires = [4, 1, 5\n",
     "\n",
     "# You don't have to set any wires. This will rely on wires that have been used on operations and measurements from the circuit\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n"
+    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n",
+    "\n",
+    "# You need to set a name for your circuit and set the project on which you want to run this circuit\n",
+    "dev.circuit_name = \"your circuit\"\n",
+    "dev.project = \"your project\""
    ]
   },
   {
@@ -135,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. create your circuit"
+    "5. create your circuit"
    ]
   },
   {
@@ -185,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. run your circuit and use results as you see fit"
+    "6. run your circuit and use results as you see fit"
    ]
   },
   {
@@ -218,7 +229,7 @@
     "- [processor configs](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_configurations.ipynb)\n",
     "- [the transpiler](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_transpiler.ipynb)\n",
     "- [custom processing steps](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_steps.ipynb)\n",
-    "- [custom gates](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_gates.ipynb)\n", 
+    "- [custom gates](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_custom_gates.ipynb)\n",
     "- [api adapter](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_api_adapter.ipynb)"
    ]
   }
