Changed some text added more specification

--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -17,6 +17,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Étapes de processing disponibles\n",
+    "\n",
+    "### Pré-processing\n",
+    "- **CliffordTDecomposition** (pennylane_calculquebec/processing/steps/base_decomposition.py)  \n",
+    "  Décompose les portes jusqu’à l’ensemble Clifford+T+RZ.  \n",
+    "  Paramètres : aucun.\n",
+    "\n",
+    "- **DecomposeReadout** (pennylane_calculquebec/processing/steps/decompose_readout.py)  \n",
+    "  Convertit les observables en lectures en base computationnelle.  \n",
+    "  Paramètres : aucun.\n",
+    "\n",
+    "- **GateNoiseSimulation** (pennylane_calculquebec/processing/steps/gate_noise_simulation.py)  \n",
+    "  Injecte du bruit de portes selon le modèle MonarQ.  \n",
+    "  Paramètres : `machine_name`, `use_benchmark`.\n",
+    "\n",
+    "- **MonarqDecomposition** (pennylane_calculquebec/processing/steps/native_decomposition.py)  \n",
+    "  Transforme les opérations en portes natives MonarQ.  \n",
+    "  Paramètres : aucun.\n",
+    "\n",
+    "- **IterativeCommuteAndMerge** (pennylane_calculquebec/processing/steps/optimization.py)  \n",
+    "  Optimise le circuit par commutations, fusions de rotations et annulations.  \n",
+    "  Paramètres : aucun.\n",
+    "\n",
+    "- **ASTAR**, **ISMAGS**, **VF2** (pennylane_calculquebec/processing/steps/placement.py)  \n",
+    "  Algorithmes de placement pour mapper les qubits logiques sur les qubits physiques.  \n",
+    "  Paramètres : `machine_name`, `use_benchmark`, `q1_acceptance`, `q2_acceptance`, `excluded_qubits`, `excluded_couplers`.\n",
+    "\n",
+    "- **Swaps** (pennylane_calculquebec/processing/steps/routing.py)  \n",
+    "  Algorithme de routage qui insère des SWAPs pour relier des qubits non-adjacents.  \n",
+    "  Paramètres : `machine_name`, `use_benchmark`, `q1_acceptance`, `q2_acceptance`, `excluded_qubits`, `excluded_couplers`.\n",
+    "\n",
+    "- **PrintTape**, **PrintWires** (pennylane_calculquebec/processing/steps/print_steps.py)  \n",
+    "  Étapes de debug qui affichent le circuit ou les fils.  \n",
+    "  Paramètres : aucun.\n",
+    "\n",
+    "### Post-processing\n",
+    "- **IBUReadoutMitigation** (pennylane_calculquebec/processing/steps/readout_error_mitigation.py)  \n",
+    "  Mitigation itérative bayésienne des erreurs de lecture.  \n",
+    "  Paramètres : `machine_name`, `initial_guess`.\n",
+    "\n",
+    "- **MatrixReadoutMitigation** (pennylane_calculquebec/processing/steps/readout_error_mitigation.py)  \n",
+    "  Mitigation matricielle (inversion de matrice) des erreurs de lecture.  \n",
+    "  Paramètres : `machine_name`.\n",
+    "\n",
+    "- **ReadoutNoiseSimulation** (pennylane_calculquebec/processing/steps/readout_noise_simulation.py)  \n",
+    "  Simule du bruit de lecture sur les résultats.  \n",
+    "  Paramètres : `machine_name`, `use_benchmark`.\n",
+    "\n",
+    "- **PrintResults** (pennylane_calculquebec/processing/steps/print_steps.py)  \n",
+    "  Étape de debug qui affiche les résultats.  \n",
+    "  Paramètres : aucun."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
